# VideoRAG

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
specs/001-langgraph-agent-design/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-langgraph-agent-design/checklists/: requirements.md
specs/001-langgraph-agent-design/contracts/: agent-interface.md
src/: config.py  main.py
src/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
src/api/: __init__.py  app.py  dependencies.py
src/api/routers/: base.py  chat.py  history.py  process.py
src/db/: __init__.py  database.py  models.py
src/db/migrations/: README  env.py  script.py.mako
src/db/migrations/versions/: 20260402_0001_create_conversation_messages.py  __init__.py
src/schemas/: __init__.py  chat.py  history.py  pagination.py  process.py
src/services/video/: __init__.py  models.py  registry.py  video_search.py
src/services/video/processor/: functions.py  tools.py  video_processor.py
src/utils/: opik_config.py
src/worker/: __init__.py  celery_app.py
src/worker/tasks/: __init__.py  video_tasks.py
